         can be exported as XML and then used with AEL. AEL will trear ROLs are read-only
         (cannot be edited). If a ROL should be changed, then the XML is edited or regenerated
         and then imported again into AML.

WIP      [CORE] AML/AEL must report the aspect ratio of artwork to the skin.

WIP      [CORE] New artwork type, 3dboxes.


[B]Advanced MAME Launcher | version 0.9.9 | 22 March 2019[/B]

FEATURE  [CORE] Improve statistics of working, non-working games, etc. for the Main filters.

FEATURE  [CORE] [LEIA] Check out the ListItem constructor offscreen parameter in Leia.
         The offscreen parameter increases the speed a bit.
         This requires Kodi version detection and having different code for Krypton/Leia.
         See https://forum.kodi.tv/showthread.php?tid=329315&pid=2711937#pid2711937
         and https://forum.kodi.tv/showthread.php?tid=307394&pid=2531524

FEATURE  [CORE] [LEIA] Use the new API function ListItem.setProperties({p1:v1, p2:v2, ...})
         This requires Kodi version detection and having different code for Krypton/Leia.
         See https://forum.kodi.tv/showthread.php?tid=332283

FEATURE  [FANARTS] Set an order to print fanart assets. This will allow to have images printed
         on top of each other.

FEATURE  [CORE] Improve the Samples scanner and report.

FEATURE  [CORE] MAME and SL plots build timestamp.

FEATURE  [CORE] MAME and SL Fanart build timestamp.

FEATURE  [CORE] MAME render and asset cache build timestamp.

FEATURE  [CORE] Move the utilities from the addon settings into the root menu.

FEATURE  [CORE] Move the report viewer from the context menu to the root menu. The context
         menu is a little bit overloaded and this will alleviate the situation.

FEATURE  [CORE] Use xbmcplugin.addDirectoryItems() instead of xbmcplugin.addDirectoryItem().
         According to the docs "Large lists benefit over using the standard addDirectoryItem().